@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-07-12T00:55:51Z",
+  "timestamp" : "2022-07-13T08:12:43Z",
   "count_outdated" : 427,
   "uniques_outdated" : 31,
-  "count" : 434,
-  "uniques" : 33,
+  "count" : 435,
+  "uniques" : 34,
   "views" : [
     {
       "timestamp": "2022-07-08T00:00:00Z",
@@ -16,6 +16,13 @@
       "timestamp": "2022-07-09T00:00:00Z",
       "count": 4,
       "count_minmax": [ 4, 4 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-07-13T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
