@@ -1,5 +1,5 @@
 {
-  "count": 7,
+  "count": 8,
   "uniques": 2,
   "views": [
     {
@@ -10,6 +10,11 @@
     {
       "timestamp": "2022-07-09T00:00:00Z",
       "count": 4,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-07-13T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
